@@ -16,6 +16,7 @@ FIX #380 Articles and static pages with underscores are not visible (P3ter)
 FIX #382 Headline and Tags toggles always closed in article edition (sudwebdesign)
 FIX #387 Fix medias administration zoombox and javascript optimisations (bazooka07)
 FIX #393 Error when adding or modifying a user (P3ter)
+FIX Double underline on footer menu (P3ter)  
 
 
 ## PLUXML 5.8.2 (2020/02/09) ##
